<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

	<LinearLayout
 	android:layout_width="match_parent"
 	android:layout_height="wrap_content"
 	android:orientation="horizontal">
    
		<TextView
		    android:id="@+id/tvBPN"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginLeft="15sp"
			android:layout_marginRight="15sp"
		    android:layout_weight="1"
		    android:text="какой-то текст"
		    android:gravity="center"
		    android:textSize="15sp">
		</TextView>
		
	</LinearLayout>
    
	<LinearLayout
 	android:layout_width="match_parent"
 	android:layout_height="wrap_content"
 	android:orientation="horizontal">

		<EditText
		    android:id="@+id/etBPN"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginLeft="15sp"
			android:layout_marginRight="15sp"
		    android:layout_weight="1"
		    android:textSize="15sp"
		    android:hint="@string/etBPN">
		</EditText>
		
	</LinearLayout>
	
	<LinearLayout
 	android:layout_width="match_parent"
 	android:layout_height="wrap_content"
 	android:orientation="horizontal">

		<Spinner
		    android:id="@+id/spBPK"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:singleLine="true" 
		    android:layout_marginLeft="15sp"
			android:layout_marginRight="15sp"
		    android:layout_weight="1"
		    android:textSize="15sp"
		    android:hint="@string/spBPK">
		</Spinner>
		
	</LinearLayout>
	

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:layout_gravity="center">
		
	    <Spinner
	        android:id="@+id/spBPE"
	        android:layout_width="80sp"
	        android:layout_height="wrap_content"
	        android:singleLine="true" 
	        android:layout_marginLeft="15sp"
	        android:textSize="15sp"
	        android:hint="@string/spBPE" >

		</Spinner>
		
	    
		<Button
 			android:id="@+id/btnAbp"
 			android:layout_width="wrap_content"
 			android:layout_height="40sp"
 			android:layout_marginLeft="10sp"
 			android:textSize="15sp"
 			android:text="@string/btnAbp">
		</Button>
		<Button
 			android:id="@+id/btnDbp"
 			android:layout_width="wrap_content"
 			android:layout_height="40sp"
 			android:layout_marginLeft="10sp"
 			android:textSize="15sp"
 			android:text="@string/btnDbp">
		</Button>
		
	</LinearLayout>

	<ListView
	 		android:id="@+id/lvBPS"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
 			android:layout_weight="1">
	</ListView>

</LinearLayout>