<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	android:layout_width="fill_parent"
 	android:layout_height="fill_parent"
 	android:orientation="vertical"
	android:background="@drawable/listsback"
	>
 	
    <LinearLayout
 	android:layout_width="match_parent"
 	android:layout_height="wrap_content"
 	android:orientation="horizontal">
 	
    	<EditText
    	    android:id="@+id/etSName"
    	    android:layout_width="match_parent"
    	    android:layout_height="35sp"
    	    android:layout_marginTop="10sp"
    	    android:background="@android:color/transparent"
    	    android:ems="10"
    	    android:focusable="false"
    	    android:gravity="center"
    	    android:textSize="25sp"
    	    android:textStyle="bold" >

    	</EditText>    
        
 	</LinearLayout>

	<LinearLayout
 	android:id="@+id/linearLayout1"
 	android:layout_width="match_parent"
 	android:layout_height="wrap_content"
 	android:orientation="horizontal">

		<AutoCompleteTextView
		    android:id="@+id/acPN"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="-3sp"
            android:layout_marginBottom="15sp"
		    android:layout_marginRight="10sp"
            android:layout_marginLeft="10sp"
            android:background="@drawable/customborder"
		    android:layout_weight="1.1"
		    android:completionThreshold="3"
		    android:hint="@string/add_prod" >

		</AutoCompleteTextView>

		<Button
		    android:id="@+id/btnAdd"
		    android:layout_width="47sp"
		    android:layout_height="wrap_content"
		    android:background="@drawable/roundbtn"
		    android:textColor="#FFFFFF"
		    android:layout_marginRight="10sp"
		    android:layout_marginTop="1sp"
		    android:textSize="30sp"
		    android:text="@string/Add" />
		
	</LinearLayout>
	
	
	<LinearLayout
 	android:id="@+id/ll2"
 	android:layout_width="match_parent"
 	android:layout_height="wrap_content"
 	android:orientation="horizontal">
		
	    <EditText
	        android:id="@+id/etCount"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:inputType="numberDecimal"
	        android:layout_marginLeft="10sp"
	        android:hint="@string/etCount" >

		</EditText>
		
		<AutoCompleteTextView
		    android:id="@+id/acPE"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:completionThreshold="1"
		    android:hint="@string/acPE" >
		</AutoCompleteTextView>
	    	    
	    <EditText
	 		android:id="@+id/etPrice"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:inputType="numberDecimal"
 			android:hint="@string/etPrice">
		</EditText>

	    <CheckBox
	        android:id="@+id/chbvagno"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity = "left"
	        android:layout_marginLeft="7sp"
            android:layout_gravity="center_vertical"
	        android:text="@string/chbvagno">
		</CheckBox>
		
	</LinearLayout>
	
	<LinearLayout
	android:id="@+id/ll3"
 	android:layout_width="match_parent"
 	android:layout_height="wrap_content"
 	android:gravity="center_horizontal"
 	android:orientation="horizontal">
 	
    	<Button
    	    android:id="@+id/btDel"
    		android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="15sp"
            android:layout_margin="5dp"
			android:text="@string/Del">
    	</Button>    
        
    	<Button
    		android:id="@+id/btSave"
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
            android:layout_margin="5dp"
    		android:textSize="15sp"
    		android:text="@string/Sav">
    	</Button>    
    	
  </LinearLayout>
 	
		<ListView
	 		android:id="@+id/lvData"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
 			android:layout_marginLeft="10sp"
 			android:layout_marginRight="10sp"
 			android:layout_marginTop="10sp"
 			android:dividerHeight="0sp"
 			android:divider="@android:color/transparent"
 			android:layout_weight="1">
		</ListView>
		
	<LinearLayout
	    android:layout_width="wrap_content"
	    android:layout_height="45sp"
	    android:orientation="horizontal" >

		<TextView
		    android:id="@+id/tvItogtxt"
		    android:layout_width="wrap_content"
		    android:layout_height="match_parent"
		    android:background="#96f065"
		    android:focusable="false"
		    android:gravity="left"
		    android:paddingLeft="15sp"
		    android:paddingTop="10sp"
		    android:ems="10"
		    android:text="Итого в корзине:"
		    android:textColor="#000000"
		    android:textSize="20sp" />
        
    	<TextView
    	    android:id="@+id/tvItog"
    	    android:layout_width="match_parent"
    	    android:layout_height="match_parent"
    	    android:background="#96f065"
    	    android:gravity="right"
    	    android:paddingRight="10sp"
            android:textStyle="bold"
    	    android:paddingTop="10sp"
     	    android:text=""
     	    android:ems="20"
    	    android:textColor="#000000"
    	    android:textSize="20sp" >

    	</TextView>    
    	
  </LinearLayout>
	
</LinearLayout>


<!--  android:background="#76EE00"  -->